--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -11,11 +11,11 @@
         name: Just write the current date into a log file
         user: root
         minute: "2-59/5"
-        job: date > /root/date.log
+        job: date >> /root/date.log
     - name: Set up another test cronjob
       cron:
         name: Just write the current date into another log file
         user: root
         minute: 4
         hour: "12-20"
-        job: date > /root/date.log
+        job: date >> /root/date.log
